--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ body {
   color: #434455;
   letter-spacing: 0.02em;
   text-decoration: none;
+  list-style-type: none;
 }
 .link:hover {
   color: #404bbf;
