--- a/css/style.css
+++ b/css/style.css
@@ -144,8 +144,14 @@ ul {
   align-items: center;
   margin-right: auto;
 }
+.menu-nav {
+  display: flex;
+  gap: 40px;
+  padding: 24px 0;
+}
 .container {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
+*
