--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
-  max-width: 496;
+  max-width: 496px;
 }
 .header-trzy {
   font-weight: 500;
@@ -175,4 +175,16 @@ ul {
 }
 .ul-list:last-child {
   margin-right: 0;
+}
+.logo-footer {
+  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  line-height: 1.17;
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  margin-right: 76px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
