--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,16 @@ ul {
   padding: 0 15px;
   margin: 0 auto;
 }
+.li-dwa {
+  width: ((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
+  text-decoration: none;
+  list-style-type: none;
+  display: flex;
+  gap: 40px;
+  padding: 24px 0;
+}
 .ul-list {
   display: flex;
   gap: 40px;
