--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ body {
 .sekcja-trzy {
   background-color: #f4f4fd;
   padding: 120px 0;
+  width: calc((100% - 72px) / 4);
 }
 .lis {
   background-color: #ffffff;
