--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,14 @@
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
+  text-align: center;
 }
 .pee {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-align: center;
 }
 
 .header-dwa {
@@ -223,4 +225,7 @@ ul {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.person {
+  padding: 32px 16px;
 }
