--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,12 @@ body {
   background-color: #f4f4fd;
   padding: 120px 0;
   width: calc((100% - 72px) / 4);
-
-.sekcja-cztery{padding-top: 120px;
 }
 
-  
-}
+  .sekcja-cztery {
+    padding-top: 120px;
+  }
+ 
 .lis {
   background-color: #ffffff;
   text-decoration: none;
