--- a/css/style.css
+++ b/css/style.css
@@ -130,10 +130,10 @@ body {
   width: calc((100% - 72px) / 4);
 }
 
-  .sekcja-cztery {
-    padding-top: 120px;
-  }
- 
+.sekcja-cztery {
+  padding-top: 120px;
+}
+
 .lis {
   background-color: #ffffff;
   text-decoration: none;
@@ -232,5 +232,5 @@ ul {
   overflow: hidden;
 }
 .person {
-  padding: 32px 16px;
+  padding: 32px 16px 32px 16px;
 }
