--- a/css/style.css
+++ b/css/style.css
@@ -242,5 +242,8 @@ ul {
   overflow: hidden;
 }
 .person {
-  padding: 32px 16px 32px 16px;
+  padding-left: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-right: 16px;
 }
