--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.person {
+.personal {
   padding-left: 16px;
   padding-top: 32px;
   padding-bottom: 32px;
