--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ ul {
   padding: 24px 0;
 }
 .li-trzy {
+  width: calc((100% - 48px) / 3);
 }
 
 .ul-list {
@@ -246,4 +247,9 @@ ul {
   padding-top: 32px;
   padding-bottom: 32px;
   padding-right: 16px;
+}
+.appi {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
