--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ ul {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  width: calc((100% - 48px) / 3);
 }
 .ul-list:last-child {
   margin-right: 0;
