--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body {
   padding: 24px 0;
 }
 .lis-dwa {
-  width: calc((100% - 72px) / 4);
+  width: calc((100% - 3 * 24px) / 4);
 }
 .lis:last-child {
   margin-right: 0;
