--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ ul {
   padding: 32px 16px;
 }
 .appi {
-  padding: 32px 16px;
+  padding: 32px 16px 32px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
