--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ body {
   padding: 24px 0;
 }
 .lis-dwa {
-
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .lis:last-child {
   margin-right: 0;
