--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,8 @@ ul {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  margin: 0;
+  padding: 0;
 }
 .ul-list:last-child {
   margin-right: 0;
